--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -17,7 +17,7 @@
         <p class="text-muted">Belum ada transaksi</p>
     <% else %>
         <% @transactions.each do |trx| %>
-            <div class="card mb-3">
+            <div class="card mb-4">
                 <div class="row g-0">
                     <div class="col-md-2">
                         <% if trx['item_photo'] %>
@@ -32,70 +32,127 @@
                                 <%= trx['item_name'] %>
                             </h5>
 
-                            <form action="/payment/<%= trx['transaction_id'] %>" method="POST" enctype="multipart/form-data">
-                                <div class="mb-3">
-                                    <label for="quantity" class="form-label">Jumlah</label>
-                                    <input 
-                                        type="number" 
-                                        class="form-control quantity-input" 
-                                        id="quantity" 
-                                        name="quantity" 
-                                        value="<%= trx['quantity'] %>"
-                                        data-price="<%= trx['item_price'] %>"
-                                        data-id="<%= trx['transaction_id'] %>"
-                                        min="1">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="note" class="form-label">Catatan : </label>
-                                    <textarea type="text" class="form-control" name="note" id="note" value="<%= trx['note'] %>"><%= trx['note'] %></textarea>
-                                </div>
-                                <p>Total:     
-                                    <b id="total_<%= trx['transaction_id'] %>"><%= rupiah_currency(trx['total_price']) %></b>
-                                </p>
-                                <p>Status Pembayaran: 
-                                    <span class="badge bg-info"><%= trx['payment_status'] %></span>
-                                </p>
-                                 <div class="mb-3">
-                                    <label for="payment_method" class="form-label">Payment Method</label>
-                                    <select class="form-select" id="payment_method" name="payment_method">
-                                        <option value="Select Your Payment Method">Select Your Payment Method</option>
-                                        <option value="E-Wallet">E-Wallet</option>
-                                        <option value="Bank">Bank</option>
-                                        <option value="Virtual Account">Virtual Account</option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="payment_name" class="form-label">Bank/E-Wallet/VA Name</label>
-                                    <input type="text" class="form-control" id="payment_name" name="payment_name" placeholder="Input Your Payment Name">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="account_number" class="form-label">Payment Account Number</label>
-                                    <input type="text" class="form-control" id="account_number" name="account_number" placeholder="input your account number">
-                                </div>
-                               
-                                <div class="mb-3">
-                                    <label for="payment_photo" class="form-label">Payment Photo</label>
-                                    <input class="form-control" type="file" id="payment_photo" name="payment_photo" >
-                                </div>
-                                
-                                <!-- <div class="mb-3">
-                                    <% if trx['payment_photo'] %>
-                                        <p>Payment Proof:</p>
-                                        <img class="img-fluid rounded" src="/uploads/payments/<%= trx['payment_photo'] %>" style="max-width: 200px;" >
-                                    <% end %>
-                                </div> -->
+                            <!-- UNPAID VIEW: show -->
+                            <% if trx['payment_status'] != 'Paid' %>
+                                <section class="unpaid_view">
+                                    <form action="/payment/<%= trx['transaction_id'] %>" method="POST" enctype="multipart/form-data">
+                                        <div class="mb-3">
+                                            <label for="quantity" class="form-label">Jumlah</label>
+                                            <input 
+                                                type="number" 
+                                                class="form-control quantity-input" 
+                                                id="quantity" 
+                                                name="quantity" 
+                                                value="<%= trx['quantity'] %>"
+                                                data-price="<%= trx['item_price'] %>"
+                                                data-id="<%= trx['transaction_id'] %>"
+                                                min="1">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="note" class="form-label">Catatan : </label>
+                                            <textarea class="form-control" name="note" id="note"><%= trx['note'] %></textarea>
+                                        </div>
+                                        <p>Total:     
+                                            <b id="total_<%= trx['transaction_id'] %>"><%= rupiah_currency(trx['total_price']) %></b>
+                                        </p>
+                                        <p>Status Pembayaran: 
+                                            <span class="badge bg-info"><%= trx['payment_status'] %></span>
+                                        </p>
+                                        <div class="mb-3">
+                                            <label for="payment_method" class="form-label">Payment Method</label>
+                                            <select class="form-select" id="payment_method" name="payment_method">
+                                                <option value="Select Your Payment Method">Select Your Payment Method</option>
+                                                <option value="E-Wallet">E-Wallet</option>
+                                                <option value="Bank">Bank</option>
+                                                <option value="Virtual Account">Virtual Account</option>
+                                            </select>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="payment_name" class="form-label">Bank/E-Wallet/VA Name</label>
+                                            <input type="text" class="form-control" id="payment_name" name="payment_name" placeholder="Input Your Payment Name">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="account_number" class="form-label">Payment Account Number</label>
+                                            <input type="text" class="form-control" id="account_number" name="account_number" placeholder="input your account number">
+                                        </div>
+                                    
+                                        <div class="mb-3">
+                                            <label for="payment_photo" class="form-label">Payment Photo</label>
+                                            <input class="form-control" type="file" id="payment_photo" name="payment_photo" >
+                                        </div>
 
-                                <div class="row">
-                                    <div class="col">
-                                        <p class="float-end">Tanggal Pemilihan Barang : <%= trx['transaction_date'] %></label>
+                                        <div class="row">
+                                            <div class="col">
+                                                <p class="float-end">Tanggal Pemilihan Barang : <%= trx['transaction_date'] %></label>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col">
+                                                <button type="submit" class="btn btn-primary float-end">Checkout</button>  
+                                            </div>
+                                        </div>
+                                    </form>
+                                </section>
+                            <% end %>
+                            
+                            <!-- PAID VIEW: shown only when payment_status IS 'Paid' -->
+                            <% if trx['payment_status'] == 'Paid' %>
+                                <section class="paid_view">
+                                    <div class="mb-3">
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2 col-form-label">Jumlah</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" readonly class="form-control-plaintext" value="<%= trx['quantity'] %>" >
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2 col-form-label">Catatan</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" readonly class="form-control-plaintext" value="<%= trx['note'] %>">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3 row">
+                                            <label for="total_price" class="col-sm-2 col-form-label">Total Price</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" readonly class="form-control-plaintext" id="total_price" value="<%= rupiah_currency(trx['total_price']) %>">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2 col-form-label">Payment Method</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" readonly class="form-control-plaintext" value="<%= trx['payment_method'] %>">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2 col-form-label">Payment Name</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" readonly class="form-control-plaintext" value="<%= trx['payment_name'] %>">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2 col-form-label">Account Number</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" readonly class="form-control-plaintext" value="<%= trx['account_number'] %>">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2 col-form-label">Payment Photo</label>
+                                            <% if trx['payment_photo'] %>
+                                                <div class="mb-3">
+                                                    <img class="img-fluid rounded" src="/uploads/payments/<%= trx['payment_photo'] %>" style="max-width: 200px;" >
+                                                </div>
+                                            <% end %>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <button type="submit" class="btn btn-primary float-end">Checkout</button>  
-                                    </div>
-                                </div>
-                            </form>                                                      
+
+                                </section>
+                            <% end %>
                         </div>
                     </div>
                 </div>
