--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -56,14 +56,27 @@
                                                 class="form-control quantity-input" 
                                                 id="quantity" 
                                                 name="quantity" 
-                                                value="<%= trx['quantity'] %>"
+                                                value="<%= 
+                                                    if defined?(@original_transaction) && @original_transaction['transaction_id'].to_s == trx['transaction_id'].to_s
+                                                        @original_transaction['quantity']
+                                                    else 
+                                                        trx['quantity']
+                                                    end 
+                                                %>"
                                                 data-price="<%= trx['item_price'] %>"
                                                 data-id="<%= trx['transaction_id'] %>"
                                                 min="1">
                                         </div>
                                         <div class="mb-3">
                                             <label for="note" class="form-label">Catatan : </label>
-                                            <textarea class="form-control" name="note" id="note"><%= trx['note'] %></textarea>
+                                            <textarea class="form-control" name="note" id="note"><%= 
+                                                if defined?(@original_transaction) && @original_transaction['transaction_id'].to_s == trx['transaction_id'].to_s
+                                                    @original_transaction['note']
+                                                else 
+                                                    trx['note']
+                                                end  
+                                            %>
+                                            </textarea>
                                         </div>
                                         <p>Total:     
                                             <b id="total_<%= trx['transaction_id'] %>"><%= rupiah_currency(trx['total_price']) %></b>
@@ -78,19 +91,44 @@
                                         <div class="mb-3">
                                             <label for="payment_method" class="form-label">Payment Method</label>
                                             <select class="form-select" id="payment_method" name="payment_method">
-                                                <option value="Select Your Payment Method">Select Your Payment Method</option>
-                                                <option value="E-Wallet">E-Wallet</option>
-                                                <option value="Bank">Bank</option>
-                                                <option value="Virtual Account">Virtual Account</option>
+                                                <% selected_method = (defined?(@original_transaction) && @original_transaction['transaction_id'].to_s == trx['transaction_id'].to_s) ? @original_transaction['payment_method'] : nil %>
+                                                <option value="Select Your Payment Method" <%= 'selected' if selected_method.nil? %> >Select Your Payment Method</option>
+                                                <option value="E-Wallet" <%= 'selected' if selected_method === 'E-Wallet' %>>E-Wallet</option>
+                                                <option value="Bank" <%= 'selected' if selected_method == 'Bank' %>>Bank</option>
+                                                <option value="Virtual Account" <%= 'selected' if selected_method == 'Virtual Account'%> >Virtual Account</option>
                                             </select>
                                         </div>
                                         <div class="mb-3">
                                             <label for="payment_name" class="form-label">Bank/E-Wallet/VA Name</label>
-                                            <input type="text" class="form-control" id="payment_name" name="payment_name" placeholder="Input Your Payment Name">
+                                            <input 
+                                                type="text" 
+                                                class="form-control" 
+                                                id="payment_name" 
+                                                name="payment_name" 
+                                                placeholder="Input Your Payment Name"
+                                                value="<%= 
+                                                    if defined?(@original_transaction) && @original_transaction['transaction_id'].to_s == trx['transaction_id'].to_s 
+                                                        @original_transaction['payment_name']
+                                                    else 
+                                                        ''
+                                                    end 
+                                                %>"
+                                            >
                                         </div>
                                         <div class="mb-3">
                                             <label for="account_number" class="form-label">Payment Account Number</label>
-                                            <input type="text" class="form-control" id="account_number" name="account_number" placeholder="input your account number">
+                                            <input type="text" 
+                                                class="form-control" 
+                                                id="account_number" 
+                                                name="account_number" 
+                                                placeholder="input your account number"
+                                                value="<%= 
+                                                    if defined?(@original_transaction) && @original_transaction['transaction_id'].to_s == trx['transaction_id'].to_s 
+                                                        @original_transaction['account_number']
+                                                    else 
+                                                        ''
+                                                    end 
+                                                %>">
                                         </div>
                                     
                                         <div class="mb-3">
