updated transaction page

--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -71,8 +71,7 @@
                                                 else 
                                                     trx['note']
                                                 end  
-                                            %>
-                                            </textarea>
+                                            %></textarea>
                                             <% if defined?(@field_errors) && 
                                                     @field_errors['transaction_id'].to_s == trx['transaction_id'].to_s && 
                                                     @field_errors['errors']['note'] %>
