--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -109,7 +109,7 @@
                         </div>
 
                         <div class="d-grid gap-2 mb-2">
-                            <button type="submit" name="action" value="cart" class="btn btn-danger">+ Keranjang</button>
+                            <button type="submit" name="action" value="cart" class="btn btn-outline-danger">+ Keranjang</button>
                             <button type="submit" name="action" value="buy" class="btn btn-outline-danger">Beli Langsung</button>
                         </div>
                     </form>
