--- a/views/user/items/basket.erb
+++ b/views/user/items/basket.erb
@@ -25,7 +25,7 @@
                     
                     <div class="col-md-3 d-flex align-items-center justify-content-center">
                         <form action="/checkout/<%= item['basket_id'] %>" method="POST">
-                            <button type="submit" class="btn btn-success">Checkout</button>
+                            <button type="submit" class="btn btn-danger">Checkout</button>
                         </form>
                     </div>
                 </div>
