added trash button in wishlist page

--- a/views/user/items/wishlist.erb
+++ b/views/user/items/wishlist.erb
@@ -25,7 +25,9 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <form action="#">
-                                <button type="button" class="btn btn-secondary float-left">Delete</button>
+                                <button type="button" class="btn btn-outline-secondary float-left">
+                                    <img src="/img/icons/trash.svg" alt="Trash">
+                                </button>
                             </form>
                             <a href="/view_detail_item/<%= w['item_id'] %>" class="btn btn-danger float-right">Detail</a>
                         </div>
