--- a/views/user/items/wishlist.erb
+++ b/views/user/items/wishlist.erb
@@ -24,12 +24,30 @@
                             </p>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <form action="#">
-                                <button type="button" class="btn btn-outline-secondary float-left">
-                                    <img src="/img/icons/trash.svg" alt="Trash">
-                                </button>
-                            </form>
+                            <button type="button" class="btn btn-outline-secondary float-left" data-bs-toggle="modal" data-bs-target="#deleteAwishlist">
+                                <img src="/img/icons/trash.svg" alt="Trash">
+                            </button>
                             <a href="/view_detail_item/<%= w['item_id'] %>" class="btn btn-danger float-right">Detail</a>
+                        </div>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="deleteAwishlist" tabindex="-1" aria-labelledby="deleteWishlist" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="deleteWishlist">
+                                        Confirm Deletion
+                                    </h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure want to delete this wishlist ?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
