--- a/views/user/items/wishlist.erb
+++ b/views/user/items/wishlist.erb
@@ -45,7 +45,9 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <form action="/delete_my_wishlist/<%= w['item_id'] %>">
+                                        <button type="button" class="btn btn-danger">Delete</button>
+                                    </form>                                    
                                 </div>
                             </div>
                         </div>
