--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -41,7 +41,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/transaction">
+              <a class="nav-link text-white" href="/transaction_lists">
                 <img src="/img/icons/cart-check-fill.svg" alt="My Transaction">
                 <% trx = transaction_count(current_user['user_id']) %>
                 <% if trx > 0 %>
