updated transaction page

--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -5,11 +5,26 @@
     <div class="card mb-4">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="" class="img-fluid rounded-start" alt="">
+                <img src="item_photo" class="img-fluid rounded-start" alt="">
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 mb-2">
                 <div class="card-body">
                     <h5 class="card-title">Item Name</h5>
+                    <p class="card-text">
+                        Item Price Per Unit 
+                    </p>
+                    <p class="card-text">
+                        Item Brand 
+                    </p>
+
+                    <p class="card-text">
+                        Item Description 
+                    </p>
+
+                    <p class="card-text">
+                        Item SKU / Unit  
+                    </p>
+
                     <p class="card-text">
                         Quantity Order
                     </p>
