--- a/views/user/items/transaction_lists.erb
+++ b/views/user/items/transaction_lists.erb
@@ -36,7 +36,7 @@
                                     </h5>
                                 </div>
                                 <div class="col">
-                                    <a href="/transaction" class="btn btn-outline-secondary float-end" role="button">Detail</a>
+                                    <a href="/transaction/<%= trx['transaction_id'] %>" class="btn btn-outline-secondary float-end" role="button">Detail</a>
                                 </div>
                             </div>
 
