--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -3,43 +3,53 @@
     <hr>
 
     <div class="card mb-4">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="item_photo" class="img-fluid rounded-start" alt="">
-            </div>
-            <div class="col-md-8 mb-2">
-                <div class="card-body">
-                    <h5 class="card-title">Item Name</h5>
-                    <p class="card-text">
-                        Item Price Per Unit 
-                    </p>
-                    <p class="card-text">
-                        Item Brand 
-                    </p>
+        <% if @transaction %>
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <% if @transaction['item_photo'] %>
+                        <img src="/uploads/items/<%= @transaction['item_photo'] %>" class="img-fluid rounded-start" alt="<%= @transaction['item_name'] %>">
+                    <% else %>
+                        <img src="/img/question.png" class="img-fluid rounded-start" alt="No Image">
+                    <% end %>
+                </div>
+                <div class="col-md-8 mb-2">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= @transaction['item_name'] %>
+                        </h5>
+                         <p class="card-text mb-2">
+                            <b>Brand:</b> <%= @transaction['item_brand'] || '-' %> 
+                        </p>
+                        <p class="card-text">
+                            <b>Price per unit:</b> <%= rupiah_currency(@transaction['item_price']) %> 
+                        </p>
+                        <p class="card-text">
+                            <b>Description:</b> <%= @transaction['item_description'] %> 
+                        </p>
 
-                    <p class="card-text">
-                        Item Description 
-                    </p>
+                        <p class="card-text">
+                            <b>SKU:</b> <%= @transaction['item_unit'] %>  
+                        </p>
 
-                    <p class="card-text">
-                        Item SKU / Unit  
-                    </p>
+                        <p class="card-text">
+                            <b>Quantity:</b> <%= rupiah_currency(@transaction['quantity']) %>
+                        </p>
 
-                    <p class="card-text">
-                        Quantity Order
-                    </p>
-                    <p class="card-text">
-                        Total Price
-                    </p>
-                    
-                    <p class="card-text">
-                        <small class="text-body-secondary float-end">
-                            Transaction Date
-                        </small>
-                    </p>
+                        <p class="card-text">
+                            <b>Total Price:</b> <%= rupiah_currency(@transaction['total_price']) %>
+                        </p>
+                        
+                        <p class="card-text">
+                            <small class="text-body-secondary float-end">
+                                Transaction Date: <%= @transaction['transaction_date'] %>
+                            </small>
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
+        <% else %>
+            <p class="text-muted">Transaction not found</p>
+        <% end %>
     </div>
 
 </div>
